--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
     </div>
   </nav>
    <%= yield %>
-  <footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white-50" style="position: absolute bottom: 0">
+  <footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white-50" style="margin-top: 120px">
     <div class="container text-center">
       <small>Copyright &copy; Otters inc</small>
     </div>
