--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -3,5 +3,5 @@
   <%= f.input :address %>
   <%= f.input :category, collection: Restaurant::CATEGORY %>
   <%= f.input :phone_number %>
-  <%= f.submit class: "btn btn-primary" %>
+  <%= f.submit class: "btn btn-primary mb-10" %>
 <% end %>
